# gpu-voxel-fields

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
implementation/: Cargo.toml
implementation/src/: app.rs  camera.rs  crosshair_pipeline.rs  distance_field.rs  distance_field_pipeline.rs  input.rs  main.rs  node.rs  octree.rs  pixels_draw_pipeline.rs  place_over_frame.rs  quad.rs  ray.rs  ray_marcher_compute.rs  ray_marcher_pipeline.rs  screen_quad_pipeline.rs  utils.rs  world.rs
implementation/src/distance_field/: brute_force.comp  brute_force.rs  combined.comp  compute.rs  fim.rs  hybrid.rs  jump_flooding.rs  reset.rs
implementation/src/shaders/: distance_field.comp  quad.frag  quad.vert  ray_marcher.comp  ray_marcher.comp.spv  raymarcher.comp  screen_quad.frag  screen_quad.frag.spv  screen_quad.vert  screen_quad.vert.spv
implementation/src/world/: chunk.rs  voxel.rs
report/: overview.tex  references.bib  synopsis.tex
report/dissertation/: abbrev.tex  abstract.tex  acknowledgements.tex  chapter1.tex  chapter1_introduction.tex  chapter2_literature.tex  chapter3_methodology.tex  chapter3_system_design.tex  chapter4_development.tex  chapter4_implementation.tex  chapter5_conclusion.tex  chapter5_evaluation.tex  chapter6_conclusion.tex  dissertation.lof  dissertation.out  dissertation.tex  dissertation.toc  glossary.tex  references.bib  surreydissertation.cls
report/synopsis/: references.bib  synopsis.aux  synopsis.bbl  synopsis.blg  synopsis.fdb_latexmk  synopsis.fls  synopsis.tex
