[package]
name = "voxels"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.29.2"
num_enum = "0.7.3"
rand = { version = "0.8.5", features = ["small_rng"] }
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-util = { git = "https://github.com/vulkano-rs/vulkano" }
winit = "0.30.5"
